--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-DISCORD_TOKEN=
-MONGO_TOKEN=
-GIPHY_TOKEN=
-WEBHOOK_ID=
-WEBHOOK_TOKEN=
-DISCORD_ID=
-OWNER_ID=
-GROQ=
+DISCORD_TOKEN=MTM3MTQ3NzkyNDIzNDEzNzY4MA.GeQgbL.v1_AdEi9rhGuHlmF2BkH4LtNtGKL20Zl22DbGs
+MONGO_TOKEN=mongodb+srv://codex-us2:codex-us2@codex-us2.62zm1.mongodb.net/?retryWrites=true&w=majority&appName=codex-us2
+GIPHY_TOKEN=xsBNwSedRrwrwn1ZyjVRta93i00yhpiJ
+WEBHOOK_ID=1371478580038471700
+WEBHOOK_TOKEN=PLIImtEPIFsvakO_giTh16A2O-Shw-AYDokzZt0K7uVdglO-GA5fWy2OyuDra-GCTm5V
+DISCORD_ID=1371477924234137680
+OWNER_ID=527605098181034014
+GROQ=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
 
 # Not neccessary variables
 DISCORD_STATUS="Listening to Codex, Subscribe To CODeX" # seprate by comma
 RADIO="" # default to https://icecast-qmusicnl-cdp.triple-it.nl/Qmusic_nl_live.mp3
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID=40c5ee08678d4e60aef46bedc6761fd4
+SPOTIFY_CLIENT_SECRET=2e8ef57a93454b31b035569f64fea7c8`
 LAVALINK_HOST="lava.link"
 LAVALINK_PASSWORD="I'm a secret"
 LAVALINK_PORT=80
